--- a/KeyValueStore/KeyValueStore.csproj
+++ b/KeyValueStore/KeyValueStore.csproj
@@ -47,9 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attribute.cs" />
+    <Compile Include="IStore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Store.cs" />
+    <Compile Include="PrimaryStore.cs" />
+    <Compile Include="SecondaryStore.cs" />
+    <Compile Include="StoreManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
